@@ -24,12 +24,13 @@ repositories {
 
 dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
+    compile 'org.apache.commons:commons-lang3:3.12.0'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.2.0.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.0.RELEASE'
     compile 'postgresql:postgresql:9.1-901-1.jdbc4'
-    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
+    compile 'org.apache.poi:poi-ooxml:3.17'
+    compile 'org.springframework:spring-beans:5.2.1.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.1.RELEASE'
+
     // https://mvnrepository.com/artifact/commons-collections/commons-collections
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
 // https://mvnrepository.com/artifact/org.apache.poi/poi
@@ -38,7 +39,6 @@ dependencies {
     compile group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '3.17'
 // https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans
     compile 'org.apache.xmlbeans:xmlbeans:2.6.0'
-    compile 'org.apache.commons:commons-lang3:3.12.0'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
